--- a/views/includes/head.ejs
+++ b/views/includes/head.ejs
@@ -7,7 +7,7 @@
   />
   <title>اپلیکیشن چت</title>
   <link
-    rel="stylesheet"
+    rel="stylesheet"const router = express.Router();
     href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
   />
 
