--- a/views/auth/new-password.ejs
+++ b/views/auth/new-password.ejs
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-    <link rel="icon" type="image/png" href="/assets/image/img_avatar.png" />
+    <link rel="icon" type="image/x-icon" href="/assets/image/icon/favicon.ico" />
     <link
       rel="stylesheet"
       type="text/css"
