--- a/public/assets/css/mrt/mrt.css
+++ b/public/assets/css/mrt/mrt.css
@@ -171,7 +171,7 @@
   border-radius: 8px;
 }
 
-.you-message {
+.my-message {
   justify-content: start;
 }
 .other-message {
@@ -179,7 +179,7 @@
   justify-content: end;
 }
 
-.you-message .message-text {
+.my-message .message-text {
 
   color: #292929;
 
@@ -187,7 +187,7 @@
 
 
 
-.you-message .message-content {
+.my-message .message-content {
   justify-items: end;
 }
 .custom-pointer{
