--- a/views/inbox.ejs
+++ b/views/inbox.ejs
@@ -102,6 +102,13 @@
                       </div>
 
                       <% } %> <% }); %>
+                      
+                      <% if(data && data.length === 0) { %>
+                      <div class="text-center">
+                        <img src="assets/image/no-chat.jpg" width="200" height="180" />
+                        <p>یک گفت و گو را با + اضافه کنید</p>
+                      </div>
+                      <% } %>
                     </div>
                   </div>
                 </div>
@@ -306,6 +313,7 @@
   <!-- Footer -->
   <%- include("./includes/end.ejs") %>
 </div>
+
 <script>
   let typingTimer;
   const doneTypingInterval = 500;
@@ -363,8 +371,8 @@
           let generatedHtml = `<ul>`;
           result.forEach((user) => {
             generatedHtml += `<li onclick="createConversation('${user._id}', '${user.name}')">
-                <div class="user bg-primary">
-                  <div class="username">${user.name}</div>
+                <div class="user">
+                  <div class="bg-gradient-primary p-3 rounded text-white custom-pointer">${user.name}</div>
                 </div>
               </li>`;
           });
@@ -417,6 +425,9 @@
     }
   }
 
+
+
+
   async function getMessages(conversation_id, current_conversation_name) {
     let response = await fetch(`/inbox/messages/${conversation_id}`);
     const result = await response.json();
@@ -439,7 +450,7 @@
               : "assets/images/images.png";
             const messageClass =
               message.sender.id === loggedinUserId
-                ? "you-message"
+                ? "my-message"
                 : `other-message`;
 
             const bgClass =
@@ -447,10 +458,10 @@
                 ? ""
                 : "bg-gradient-primary text-white";
 
-            const showAvatar =
+            const showName =
               message.sender.id === loggedinUserId
                 ? ""
-                : `<div class="text-right">${message.sender.name}</div>`;
+                : `<div class="text-right h6 text-white">${message.sender.name}</div>`;
 
             // final message html
 
@@ -458,7 +469,7 @@
               <div class="col-auto">
                 <div class="card message-content ${bgClass}">
                   <div class="card-body p-2">
-                    ${showAvatar}
+                    ${showName}
                     <div class="mb-1 message-text">${message.text}</div>
             
                      <div class="d-flex align-items-center text-sm opacity-6">
@@ -487,7 +498,7 @@
   }
 
   function padZero(num) {
-    return num.toString().padStart(2, "0");ظ
+    return num.toString().padStart(2, "0");
   }
   form.onsubmit = async function (event) {
     event.preventDefault();
